[project]
name = "cashu-mint-status-board"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bolt11>=2.1.1",
    "fastapi[standard]>=0.116.2",
    "httpx-ws>=0.7.2",
    "pyln-client>=0.10.2.post1",
    "sqlmodel>=0.0.25",
]
